--- a/styles.css/styles-main.css
+++ b/styles.css/styles-main.css
@@ -105,27 +105,29 @@ header a.header-contact {
   align-items: center;
 }
 header svg.icon-envelope {
-  width: 20px;
-  height: 16px;
+  width: 16px;
+  height: 11.996px;
   flex-shrink: 0;
-  margin-right: 10px;
 }
 
 header svg.icon-smartphone {
-  width: 20px;
+  width: 10px;
   height: 16px;
   flex-shrink: 0;
-  margin-right: 10px;
 }
 button {
+  width: 200px;
+  height: 50px;
   font-weight: 700;
   line-height: 1.875;
   cursor: pointer;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color var(--transition), color var(--transition);
 }
 
 button:hover,
 button:focus {
+  border-radius: 4px;
   color: #fff;
   background-color: #2196f3;
 }
@@ -157,9 +159,8 @@ button:focus {
 .container .hero-section {
   background-color: #333;
   width: auto;
-  background: -webkit-linear-gradient(#00000066, #00000066),
-    url("/images/background.jpg");
-  background-image: url("/images/background.jpg");
+  background: rgba(47, 48, 58, 0.4);
+  background-image: url("../images/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -168,7 +169,7 @@ button:focus {
 .main-section {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 30px;
   align-items: center;
   margin: 0;
@@ -183,20 +184,20 @@ button:focus {
 .main-section h3 {
   display: flex;
   justify-content: center;
+  text-align: left;
   color: var(--link-third-color);
   font-size: 14px;
   font-family: var(--link-font-family);
   font-weight: 700;
   letter-spacing: 0.42px;
   text-transform: uppercase;
-  gap: 30px;
   width: 270px;
 }
 
 .main-section p {
   display: flex;
-  justify-content: flex-start;
-  text-align: start;
+  justify-content: center;
+  text-align: left;
   color: var(--link-another-color);
   font-size: 14px;
   font-family: var(--link-font-family);
@@ -218,39 +219,34 @@ button:focus {
   font-weight: 700;
   letter-spacing: 0.0675em;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
   padding-top: 250px;
-}
-.second-section {
-  width: 1170px;
-  padding-left: 215px;
 }
 .image {
   display: flex;
   padding-top: 50px;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   gap: 30px;
-  padding-top: 50px;
 }
 .images {
   display: block;
 }
 
 /* Third Section Styles */
-.third-section {
-  padding-left: 150px;
+.team {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
 }
 .third-section ul {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
   margin: 0;
   list-style: none;
-  gap: 10px;
+  gap: 30px;
 }
 
 .third-section h3 {
@@ -268,50 +264,47 @@ button:focus {
   font-size: 1em;
   font-family: var(--link-font-family);
   letter-spacing: 0.03em;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .team-img {
-  width: 370px;
-  height: 294px;
+  width: 270px;
+  height: 260px;
   flex-shrink: 0;
 }
 
 .last-title {
+  display: flex;
+  justify-content: center;
   color: var(--link-third-color);
-  text-align: center;
   font-size: 2.25em;
   font-family: var(--link-font-family);
   font-weight: 700;
   letter-spacing: 0.0675em;
   padding-top: 188px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   padding-bottom: 50px;
 }
 
 .team-presentation {
-  width: 370px;
-  height: 469px;
+  width: 270px;
+  height: 428px;
   flex-shrink: 0;
-  background-color: #fff;
-  border: 1px solid #eee;
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
   border-bottom-left-radius: 10px 5px;
   border-bottom-right-radius: 5px 5px;
-  box-shadow: 0px 2px #757575;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   font-weight: 500;
 }
 /*customers section*/
 
 main div.customers {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin-top: 50px;
   padding-bottom: 94px;
   gap: 30px;
-  padding-left: 115px;
 }
 main svg.customers {
   color: #afb1b8;
@@ -322,7 +315,7 @@ main svg.customers {
   border: 1px solid #afb1b8;
   padding: 16px 32px;
   margin: 0px;
-  fill: var(--link-another-color)
+  fill: var(--link-another-color);
 }
 .customers h2 {
   text-align: center;
@@ -341,25 +334,35 @@ main svg.customers {
 .footer {
   background-color: #2f303a;
   color: #fff;
+  height: 251px;
+}
+.footer {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
 }
 .contact-class {
+  flex: 1;
+  margin: 0px;
+}
+address.contact-class {
   display: flex;
   flex-direction: column;
   padding-left: 215px;
-  gap: 10px;
-  margin: 0;
+  padding-top: 60px;
+}
+div.contact-class {
+padding-top: 85px;
+padding-right: 900px;
 }
 .social-media {
-  padding-left: 320px;
-  padding-bottom: 10px;
+  padding-bottom: 12px;
 }
-
+.social-media-footer {
+float: left;
+}
 footer a.logo-white {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
   font-family: raleway;
   font-weight: 700;
   font-size: 26px;
@@ -367,7 +370,7 @@ footer a.logo-white {
   letter-spacing: 0.03em;
   color: var(--link-color);
   text-decoration: none;
-  padding: 60px 0px 16px 205px;
+  margin-bottom: 28px;
 }
 
 footer span.logo-label {
@@ -380,22 +383,17 @@ footer span.logo-label {
   text-decoration: none;
 }
 
-address.contact-class {
-  padding-top: 25px;
-  padding-left: 215px;
-  padding-bottom: 10px;
-}
-
-.contact-class a.address-class {
+ .address-class {
   color: var(--link-color);
   font-size: 16px;
   font-family: var(--link-font-family);
   line-height: 16.41px;
   letter-spacing: 0.02625em;
   text-decoration: none;
-  width: 231px;
+  width: 270px;
   height: 16px;
   flex-shrink: 0;
+  margin-bottom: 12px;
 }
 
 a.mail,
@@ -409,6 +407,7 @@ a.phone {
   width: 231px;
   height: 16px;
   flex-shrink: 0;
+  margin-bottom: 12px;
 }
 
 /* icon */
@@ -465,27 +464,20 @@ svg.icon-Logo6:hover {
   fill: var(--link-active-color);
   border: 1px solid var(--link-active-color);
 }
-.social-media-class {
-  display: flex;
-  gap: 10px;
-  padding-left: 320px;
-  padding-top: 15px;
-}
+
 .social-media-footer {
   width: 44px;
   height: 44px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #443F44;
+  background-color: #443f44;
   border-radius: 50%;
   transition: var(--transition);
 }
 .social-media-footer {
   width: 44px;
   height: 44px;
-  display: flex;
-  align-items: center;
   border-radius: 50%;
   transition: var(--transition);
 }
@@ -501,6 +493,7 @@ svg.media {
 svg.media:hover {
   background-color: var(--link-active-color);
 }
-footer .mail:hover, .phone:hover {
+footer .mail:hover,
+.phone:hover {
   color: var(--link-active-color);
 }
