--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -18,10 +18,11 @@
   font-size: 16px;
   font-weight: 400;
   color: var(--link-third-color);
+  
 }
-.container {
+div.container {
   width: 1600px;
-  align-items: center;
+  list-style: none;
 }
 h3 {
   color: var(--link-third-color);
@@ -125,8 +126,7 @@ header svg.icon-smartphone {
 
 .main-section {
   flex-shrink: 0;
-  display: inline;
-  flex-direction: row;
+  
   text-align: center;
   color: var(--link-third-color);
   font-size: 1em;
@@ -134,23 +134,14 @@ header svg.icon-smartphone {
   font-weight: 500;
   line-height: 1.625em;
   letter-spacing: 0.03em;
-  padding-left: 500px;
-  padding-bottom: 150px;
 }
 
-.button {
-  width: 120px;
-  height: 38px;
+.main-section button.button {
+
   flex-shrink: 0;
   background: #f5f4fa;
-  border-radius: 4px;
-  background-color: #f5f4fa;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
   text-decoration: none;
-  transition: color var(--transition), background-color var(--transition),
-    box-shadow var(--transition);
+  
 }
 
 .main-section .button {
@@ -165,9 +156,14 @@ header svg.icon-smartphone {
 
 .button:focus,
 .button:hover {
+  border-radius: 4px;
   color: #fff;
   background-color: #2196f3;
-  box-shadow: 0 3px 2px #a2a2a2;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
+}
+.second-section {
+  display: flex;
+  justify-content: center;
 }
 .second-section ul {
   margin: 50px 0px 0px;
@@ -178,74 +174,114 @@ header svg.icon-smartphone {
   position: static;
   float: left;
   padding: 2.5em;
-  padding-left: 120px;
 }
 .footer {
-  background-color: #333;
-  padding-top: 3.75em;
-  padding-bottom: 3.75em;
-  flex-direction: column;
-  position: static;
-  float: left;
-  padding: 2.5em;
+  background-color: #2f303a;
+  color: #fff;
+  height: 251px;
+  width: 1600px;
 }
-.contact-class,
-.footer-logo {
-  flex-shrink: 0;
-  display: inline;
-  flex-direction: column;
-  float: left;
+.footer {
+  display: flex;
+  justify-content: center;
 }
 .contact-class {
+  flex: 1;
+  margin: 0px;
+}
+address.contact-class {
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
-  padding-left: 6.25em;
+  padding-left: 215px;
+  padding-top: 60px;
 }
-.footer-logo {
-  color: var(--link-active-color);
-  font-size: 1.625em;
-  font-family: Raleway;
+div.contact-class {
+padding-top: 85px;
+padding-right: 900px;
+}
+.social-media {
+  padding-bottom: 12px;
+}
+.social-media-footer {
+float: left;
+}
+footer a.logo-white {
+  display: flex;
+  flex-direction: row;
+  font-family: raleway;
   font-weight: 700;
-  letter-spacing: 0.04875em;
-  padding-left: 3.5em;
-}
-.adress {
+  font-size: 26px;
+  line-height: 30.52px;
+  letter-spacing: 0.03em;
   color: var(--link-color);
-  font-size: 14px;
-  font-family: var(--link-font-family);
-  letter-spacing: 0.02625em;
   text-decoration: none;
-  width: 14.4375em;
-  height: 1em;
+  margin-bottom: 28px;
 }
-.mail {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 0.875em;
-  font-family: var(--link-font-family);
-  line-height: 1em;
-  letter-spacing: 0.02625em;
+
+footer span.logo-label {
+  color: var(--link-active-color);
+  font-family: raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 30.52px;
+  letter-spacing: 0.03em;
   text-decoration: none;
-  width: 14.4375em;
-  height: 1em;
 }
-.phone {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 0.875em;
-  font-family: var(--link-font-family);
-  line-height: 1em;
-  letter-spacing: 0.02625em;
-  text-decoration: none;
-  width: 14.4375em;
-  height: 1em;
-}
-.adress:hover,
-.adress:focus,
-.mail:hover,
-.mail:focus,
-.phone:hover,
-.phone:focus {
+
+ .address-class {
   color: var(--link-color);
+  font-size: 16px;
+  font-family: var(--link-font-family);
+  line-height: 16.41px;
+  letter-spacing: 0.02625em;
+  text-decoration: none;
+  width: 270px;
+  height: 16px;
+  flex-shrink: 0;
+  margin-bottom: 12px;
+}
+
+a.mail,
+a.phone {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-family: var(--link-font-family);
+  line-height: 16px;
+  letter-spacing: 0.02625em;
+  text-decoration: none;
+  width: 231px;
+  height: 16px;
+  flex-shrink: 0;
+  margin-bottom: 12px;
+}
+
+.social-media-footer {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #443f44;
+  border-radius: 50%;
+  transition: var(--transition);
+}
+.social-media-footer {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  transition: var(--transition);
+}
+.social-media-footer:hover {
+  background-color: var(--link-active-color);
+}
+
+svg.media {
+  fill: #fff;
+  transition: fill var(--transition);
+}
+
+svg.media:hover {
+  background-color: var(--link-active-color);
 }
 .icon-smartphone:hover {
   stroke: #2196f3;
