--- a/styles.css/styles-main.css
+++ b/styles.css/styles-main.css
@@ -115,7 +115,7 @@ header svg.icon-smartphone {
   height: 16px;
   flex-shrink: 0;
 }
-.button-open {
+button {
   width: 200px;
   height: 50px;
   font-weight: 700;
@@ -125,8 +125,8 @@ header svg.icon-smartphone {
   transition: background-color var(--transition), color var(--transition);
 }
 
-.button-open:hover,
-.button-open:focus {
+button:hover,
+button:focus {
   border-radius: 4px;
   color: #fff;
   background-color: #2196f3;
@@ -533,50 +533,209 @@ footer .mail:hover,
 
 /* Modal window*/
 
-.modal {
-  width: 528px;
-  height: 581px;
+div.modal {
   position: fixed;
-  margin: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  z-index: 5;
+  opacity: 0.9;
+  transition: var(--transition);
+}
+
+div.is-hidden {
+  visibility: hidden;
+  transition: var(--transition);
+}
+div.modal-content {
+  width: 528px;
+  height: 581px;
+  flex-shrink: 0;
   border-radius: 4px;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  z-index: 2;
-  padding: 10px;
-  transition: transform var(--transition);
+  background: var(--link-color);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  padding: 40px;
+  display: inline-block;
+}
+button.close-button {
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  flex-shrink: 0;
+  cursor: pointer;
+  background-color: var(--link-color);
+  fill: var(--link-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  stroke-width: 1px;
+  stroke: rgba(228, 220, 220, 0.904);
+  outline: none;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0px;
+}
+div.modal-content svg.close-button {
+  color: #000;
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+  margin: 5px;
+  transition: color var(--transition);
+}
+div.modal-content h2 {
+  width: 448px;
+  color: var(--link-third-color);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+  margin: 0px 0px 2px;
 }
 
-.modal p {
-  font-size: 0.9rem;
-  margin: 0.4rem 0 0.2rem;
+form.modal-content div {
+  position: relative;
+}
+label.modal-content {
+  color: var(--link-another-color);
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.12px;
+  margin: 10px 0px 4px;
+  display: inline-block;
+}
+input.modal-content {
+  width: 448px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  padding-left: 42px;
+  cursor: pointer;
+  transition: border var(--transition);
+}
+form.modal-content svg.form {
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  transition: color var(--transition);
 }
 
-.close-button {
+form label.comments {
+  display: inline-block;
+  margin: 10px 0px 4px 0px;
+  color: var(--link-another-color);
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.12px;
+}
+form textarea.comments {
+  width: 448px;
+  height: 120px;
+  flex-shrink: 0;
+  padding: 12px 16px;
+  resize: none;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 20px;
+  transition: border var(--transition);
+}
 
-  background: #eee;
-  padding: 0 7px 0 7px;
-  border: 1px solid #757575;
-  border-radius: 50%;
+form label.terms-n-conditions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+form input.terms-n-conditions {
+  appearance: none;
+}
+form svg.terms-n-conditions {
+  cursor: pointer;
+  width: 16px;
+  height: 15px;
+  flex-shrink: 0;
+  color: var(--link-color);
+  border: 2px solid #212121;
+  border-radius: 2px;
+}
+label.terms-n-conditions
+  input.terms-n-conditions:checked
+  + svg.terms-n-conditions {
+  color: var(--link-active-color);
+  border-radius: 2px;
+  background-color: var(--link-active-color);
+  border: none;
+}
+
+form span.terms-n-conditions {
+  width: 396px;
+  height: 24px;
+  flex-shrink: 0;
+  color: #757575;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.42px;
+  margin-left: 8px;
+}
+form span.terms-n-conditions a {
+  color: #2196f3;
+  text-decoration-line: underline;
+}
+
+form label.send-button {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0px;
+}
+form input.send-button {
+  width: 200px;
+  height: 50px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px; /* 187.5% */
+  letter-spacing: 0.96px;
+  border: 0px;
   cursor: pointer;
 }
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px);
-  z-index: 1;
-  transition: trasnform var(--transition);
+div.modal-content {
+  width: 450px;
+  height: 609px;
 }
-
-.hidden {
-  visibility: hidden;
-  opacity: 0;
+div.modal-content h2 {
+  width: 370px;
+}
+div.modal-content input.modal-content {
+  width: 370px;
+}
+div.modal-content textarea.comments {
+  width: 370px;
+}
+span.terms-n-conditions {
+  width: 336px;
+  height: 14px;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: 0.36px;
+}
+div.modal-content input.modal-content:hover,
+div.modal-content textarea.comments:hover,
+div.modal-content input.modal-content:focus,
+div.modal-content textarea.comments:focus {
+  border: 1px solid var(--link-active-color);
+  outline: none;
+}
+div.modal-content svg.close-button:hover,
+div.modal-content form.modal-content div:hover {
+  color: var(--link-active-color);
 }
